styles.css
:root {
  --main-bg-color: #6070ff;
  --title-color: #172b4d;
  --sub-title-color: #344563;
  --media-color: #7f8cff;
  --main-font-family: "Poppins", sans-serif;
  --background: #f7f7f9;
}

* {
  margin: 0;
  padding: 0;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: #fff;
}

body {
  padding: 0;
  margin: 0;
  font-family: var(--main-font-family);
}

/* Modal Section Start */
.overlay {
  display: none;
  position: fixed;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  transition: 2000ms ease-in-out;
  background: #C1C7D0;
  mix-blend-mode: multiply;
}

.modal {
  display: none;
  position: fixed;
  left: 0px;
  right: 0px;
  transition: 2000ms ease-in-out;
  top: 0px;
  bottom: 0px;
  z-index: 10;
}

.overlay.active {
  display: block;
}

.modal.active {
  display: block;
}

.modal-container {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: 16px;
  gap: 12px;
  position: absolute;
  width: 343px;
  height: 713px;
  left: calc(50% - 343px/2);
  top: 28px;
  background: #FFFFFF;
  border: 1px solid #DFE1E6;
  border-radius: 16px;
}

.modal-container .modal-header {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.modal-container .modal-title {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172B4D;
}

.btn-close {
  width: 24px;
  height: 24px;
  font-size: 30px;
  color: #67798E;
  cursor: pointer;
}

.header-list ul {
  width: 100%;
  display: flex;
  gap: 10px;
}

.circle-dot {
  width: 8px;
  height: 8px;
  background: #C1C7D0;
  border-radius: 5px;
  margin-top: 5px;
}

.modal-img {
  width: 100%;
  height: 220px;
  border-radius: 8px;
  background-position: center;
}

.modal-desc {
  width: 100%;
  height: 220px;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
}

.modal-tech-list ul {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.modal-tech-list ul li {
  background: #EBEBFF;
  padding: 5px;
  border-radius: 8px;
}

.modal-buttons {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 20px;
}

.modal-buttons button {
  height: 100%;
  text-align: center;
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
}

.icon {
  width: 18px;
  height: 18px;
  left: 3px;
  top: 3px;
}


/* Modal Section End */

/* popup window start */

.window {
  display: none;
  background-color: #6070ff;
  backdrop-filter: blur(8px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0;
  mix-blend-mode: multiply;
}

.close-button {
  border: 0;
  background: none;
  color: #fff;
  margin-left: 325px;
  margin-top: 62px;
}

button {
  border-color: #7f8cff;
  color: #7f8cff;
  font-size: 17px;
  border-radius: 5px;
  background-color: white;
  padding: 10px;
  width: fit-content;
  transition: all 0.5s ease-out;
}

a {
  text-decoration: none;
}

.list-popup {
  margin-left: 28px;
  margin-top: 30px;
  font-family: 'Poppins', sans-serif;
  font-weight: 600;
  font-size: 32px;
  gap: 40px;
}

li {
  list-style: none;
}

.list-popup li {
  margin-top: 20px;
}

.list-popup li a {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 32px;
  line-height: 44px;
  color: #fff;
}

/* popup window End */

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.logo {
  display: block;
  padding: 10px 12px;
  margin: 0 12px;
}

.logo-text {
  color: var(--main-bg-color);
  font-size: 1.125rem;
  font-weight: 700;
  text-decoration: none;
}

.logo-text:hover {
  cursor: pointer;
}

.first-section {
  background-image: url("./images/about-image/bg_Header-Mobile.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.img {
  height: 300px;
  width: 300px;
  background-repeat: no-repeat;
  margin-left: auto;
  margin-right: auto;
}

.img-2 {
  height: 300px;
  width: 300px;
  background-repeat: no-repeat;
  margin-left: auto;
  margin-right: auto;
}

.img-3 {
  height: 300px;
  width: 300px;
  background-repeat: no-repeat;
  margin-left: auto;
  margin-right: auto;
}

.img-4 {
  height: 300px;
  width: 300px;
  background-repeat: no-repeat;
  margin-left: auto;
  margin-right: auto;
}

nav {
  width: 100%;
}

.desc-nav {
  display: none;
  position: absolute;
  width: 100%;
  margin-top: 50px;
  margin-left: 28px;
}

.fa {
  color: #6070ff;
}

#x-icon {
  display: none;
}

.desc-nav li {
  display: flex;
  text-align: right;
  justify-content: end;
  flex-direction: column;
  margin: 0 10px;
  margin-top: 40px;
}

.desc-nav li a {
  display: flex;
  text-align: right;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-size: 32px;
  line-height: 44px;
}

.intro {
  color: var(--title-color);
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 52px;
  margin-left: 20px;
}

.menu-icon {
  padding: 8px;
  margin: 0 24px;
}

.about {
  color: var(--sub-title-color);
  font-size: 1rem;
  font-weight: 400;
  line-height: 24px;
  padding: 12px 0;
  margin-left: 20px;
  margin-right: 20px;
}

.social-media-title {
  text-transform: uppercase;
  color: var(--media-color);
  font-weight: 500;
  margin-left: 20px;
}

.social-media-content {
  display: flex;
  padding: 12px 0;
  margin-left: 35px;
}

.social-media-icons {
  padding-right: 20px;
}

.social-media-icons:hover,
.menu-icon:hover,
.logo:hover {
  cursor: pointer;
}

.work-card {
  width: 100%;
  border-radius: 16px;
  margin: 44px auto;
}

.project-container {
  display: grid;
  grid-template-rows: auto 1fr;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  padding: 16px;
  margin: 20px auto 20px auto;
}
/* ... */

